--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+
+<!-- This is a comment! -->
+
+<head>
+
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Cat Perry's Favorite Cats</title>
+
+
+</head>
+
+<body>
+
+
+    <h1>Hello, World!</h1>
+
+
+
+
+
+
+</body>
+
+</html>
